--- a/css/styles.css
+++ b/css/styles.css
@@ -28,26 +28,33 @@ body {
     color: #ffffff;
 }
 
+.column-1 h3 {
+    color: black;
+    text-align: center;
+    font-weight: 100;
+}
+
 #section-2 {
     background-color: #509ea0;
     text-align: center;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    /* padding-top: 50px;
+    padding-bottom: 50px; */
 }
 
 .column-2 {
     width: 50%;
     float: left;
-    padding: 40px;
+    /* padding: 40px; */
 }
 
 #section-3 {
-    padding: 0px 7%;
+    /* padding: 0px 7%; */
 }
 
 .column-4 {
     width: 25%;
     float: left;
+    /* padding: 40px; */
 }
 
 #section-4 {
@@ -61,8 +68,6 @@ body {
 #section-5 {
     background-color: black;
     text-align: center;
-    color: white;
-    padding: 1%;
 }
 
 
@@ -90,6 +95,36 @@ body {
     border: 0;
 }
 
+
+/*La clase gallery definirá los estilos de las 
+imágenes de la sección 1 (section-1)*/
+
+.gallery {
+    width: 33.33%;
+    float: left
+}
+
+.gallery img {
+    width: 100%;
+    /* padding: 10%; */
+}
+
+
+/* REGLAS AUXILIARES */
+
+.relleno-lateral {
+    padding-left: 7%;
+    padding-right: 7%;
+}
+
+.relleno-columnas {
+    padding: 20px;
+}
+
+#section-1 img {
+    padding: 10%;
+}
+
 @media screen and (max-width: 600px) {
     /* Aquí dentro van las reglas */
     #header h1 {
@@ -103,11 +138,19 @@ body {
     }
     .column-2 {
         width: 100%;
-        padding: 10 px;
     }
-    #section-2,
-    #section-3 {
-        padding-left: 5px;
-        padding-right: 5px;
+    .relleno-lateral {
+        padding-left: 2%;
+        padding-right: 2%;
+    }
+    .column-4 {
+        width: 50%;
+    }
+    .relleno-columnas {
+        padding-right: 0px;
+    }
+    .gallery {
+        width: 50%;
+        padding: 0%;
     }
 }
